--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,12 @@ on:
     workflows: ['CI'] 
     types:
       - completed
+      
+permissions:
+  id-token: write
+  contents: read
+  checks: write
+
 jobs:
   report:
     runs-on: ubuntu-latest 
